<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ClassPlanning">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/classPlanning_btn_monday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_monday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_tuesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_tuesday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_wednesday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_wednesday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_thursday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_thursday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_friday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_friday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_saturday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classWeekendColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_saturday"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/classPlanning_btn_sunday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/classWeekendColor"
            android:textColor="@color/black"
            android:text="@string/classPlanning_sunday"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

    <Button
        android:id="@+id/classPlanning_btn_back"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button_cancel"
        android:text="@string/back"
        android:textColor="@color/black" />

</RelativeLayout>