<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar">
    </include>

    <!-- CrossWOD image -->
    <ImageView
        android:id="@+id/crossWOD"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="Logo CrossWOD"
        app:srcCompat="@drawable/logo_apaisado" />

    <Button
        android:id="@+id/main_btn_manageBox"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="290dp"
        android:backgroundTint="@color/button"
        android:text="@string/main_manageBox"
        android:visibility="gone" />

    <Button
        android:id="@+id/main_btn_checkWod"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="230dp"
        android:backgroundTint="@color/button"
        android:text="@string/main_checkWod" />

    <Button
        android:id="@+id/main_btn_reservations"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="170dp"
        android:backgroundTint="@color/button"
        android:text="@string/main_reservations" />

    <Button
        android:id="@+id/main_btn_personalBest"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/button"
        android:text="@string/main_personalBest" />

    <Button
        android:id="@+id/main_btn_tutorials"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/main_tutorials" />

</RelativeLayout>