<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUp">

    <!-- CrossWOD image -->
    <ImageView
        android:id="@+id/signUp_crossWOD"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:contentDescription="Logo CrossWOD"
        app:srcCompat="@drawable/logo_apaisado" />

    <!-- User -->
    <ProgressBar
        android:id="@+id/progresBar"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="300dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/user"
            android:textColor="@color/black"
            android:textColorHint="@color/grey40" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/grey40" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey40" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:hint="@string/repeatPassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rolequestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/areYouACoach"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:checkedButton="@+id/rb_no">

                <!-- No -->
                <RadioButton
                    android:id="@+id/rb_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:buttonTint="@color/black"
                    android:text="@string/no"
                    android:textSize="18dp"
                    android:textColor="@color/black" />

                <!-- Yes -->
                <RadioButton
                    android:id="@+id/rb_yes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:buttonTint="@color/black"
                    android:text="@string/yes"
                    android:textSize="18dp"
                    android:textColor="@color/black" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/button"
            android:text="@string/signUp" />

        <TextView
            android:id="@+id/btn_alreadyRegistered"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="50dp"
            android:text="@string/alreadyRegistered"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>